# concrete

./: .dockerignore  .gitbook.yaml  .gitignore  .gitmodules  .hadolint.yaml  .linelint.yml  .rustfmt.toml  112.sobj  128.sobj  144.sobj  160.sobj  176.sobj  192.sobj  256.sobj  80.sobj  96.sobj  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  LICENSE.txt  Makefile  README.md  README.md.orig  README.rst  UPGRADING.md  benchmark.sh  bitbucket-pipelines.yml  compare_curves_and_estimator.py  concrete_params.py  dependabot.yml  doctest.sh  estimate_oldparams.py  estimator.py  fix-doctest.sh  generate_data.py  grcov.yml  integer-tests.sh  (+19 more)
charts/: Cargo.toml
compiler/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  RELEASE_README.md  hpx.ini  setup.py  test_python.py
compiler/include/: CMakeLists.txt
compiler/lib/: CMakeLists.txt
compiler/ops/: core_named_ops.py
compiler/python/: CMakeLists.txt  CompilerAPIModule.cpp  CompilerAPIModule.h  DialectModules.h  HLFHEModule.cpp  ZamalangModule.cpp
compiler/src/: CMakeLists.txt  main.cpp
compiler/tests/: CMakeLists.txt  lit.cfg.py
concrete/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  __init__.py  version.py
concrete-benchmark/: Cargo.toml
concrete-benchmark/src/: main.rs  synthesizer.rs  utils.rs
concrete-boolean/: CHANGELOG.md  Cargo.toml  README.md
concrete-boolean/benches/: bench.rs
concrete-boolean/book/: book.toml
concrete-boolean/docs/: .gitignore  SUMMARY.md  conf.py  index.html  index.rst  requirements.txt.orig.orig  requirements_BACKUP_10435.txt  versions.json
concrete-boolean/src/: lib.rs  prelude.rs
concrete-boolean/tests/: optalysys_backend.rs
concrete-commons/: Cargo.toml  LICENSE  README.md
concrete-commons/src/: dispersion.rs  float.rs  key_kinds.rs  lib.rs  parameters.rs  signed.rs  unsigned.rs
concrete-core/: Cargo.toml  Cargo.toml.orig  Makefile  README.md
concrete-core-fixture/: Cargo.toml  LICENSE  README.md
concrete-core-fixture/src/: lib.rs  lib.rs.orig
concrete-core-test/: Cargo.toml  README.md
concrete-core-test/src/: core.rs  core.rs.orig  lib.rs  lib.rs.orig  optalysys.rs
concrete-core/benches/: bench.rs  bootstrap.rs  decomposition.rs  fft.rs  keyswitch.rs  random.rs
concrete-core/docs/: conf.py  index.rst  requirements.txt  requirements.txt.orig  versions.json
concrete-core/src/: lib.rs  prelude.rs  prelude.rs.orig  prelude.rs.orig.orig  utils.rs
concrete-csprng/: Cargo.toml  README.md
concrete-csprng/benches/: benchmark.rs
concrete-csprng/src/: aesni.rs  ctr.rs  generate_random.rs  lib.rs  main.rs  regular.rs  software.rs
concrete-ffi/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
concrete-ffi/src/: lib.rs
concrete-ffi/tests/: npe_tests.c  tests.c
concrete-integer/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
concrete-integer/benches/: bench.rs
concrete-integer/docs/: SUMMARY.md  introduction.md
concrete-integer/src/: keycache.rs  lib.rs  test_user_docs.rs  tests.rs
concrete-npe/: CMakeLists.txt  Cargo.toml  README.md  build.rs
concrete-npe/src/: cross.rs  gsw.rs  key_dispersion.rs  key_distributions.rs  lib.rs  lwe.rs  operators.rs  rlwe.rs  tools.rs
concrete-optimizer/: Cargo.toml  build.rs  cbindgen.toml
concrete-optimizer/benches/: benchmark.rs
concrete-optimizer/src/: config.rs  global_parameters.rs  lib.rs  parameters.rs  pareto.rs  weight.rs
concrete-shortint/: CHANGELOG.md  Cargo.toml  README.md  mmm
concrete-shortint/benches/: bench.rs
concrete-shortint/docs/: SUMMARY.md  introduction.md
concrete-shortint/examples/: generates_test_keys.rs
concrete-shortint/src/: keycache.rs  lib.rs  test_user_docs.rs
concrete-test/: Cargo.toml
concrete-test/src/: lib.rs  synthesizing.rs
concrete/benches/: booleans.rs  shortints.rs
concrete/common/: __init__.py  common_helpers.py  fhe_circuit.py  operator_graph.py
concrete/docs/: README.md  SUMMARY.md  conf.py  index.rst
concrete/numpy/: __init__.py  compile.py  np_dtypes_helpers.py  np_fhe_compiler.py  np_indexing_helpers.py  np_inputset_helpers.py  np_mlir_converter.py  tracing.py
concrete/onnx/: __init__.py  convolution.py  maxpool.py
concrete/quantization/: __init__.py  post_training.py  quantized_activations.py  quantized_array.py  quantized_layers.py  quantized_module.py
concrete/src/: config.rs  error.rs  errors.rs  global_state.rs  keycache.rs  keys.rs  lib.rs  lwe_bsk.rs  lwe_ksk.rs  lwe_params.rs  lwe_secret_key.rs  prelude.rs  rlwe_params.rs  rlwe_secret_key.rs  syntax_sugar.rs  tests_serde.rs  traits.rs  user_doc_tests.rs
concrete/tests/: test_booleans.rs  test_fhe_number_ops.rs  test_integers.rs  test_macros.rs  test_shortints.rs  test_specifying_parameters.rs
concrete/torch/: __init__.py  compile.py  numpy_module.py
frontends/concrete-rust/: Cargo.toml  Makefile  build.rs
src/: CMakeLists.txt  addition.cu  addition.cuh  bit_extraction.cu  bit_extraction.cuh  boolean_gates.cu  bootstrap_amortized.cu  bootstrap_amortized.cuh  bootstrap_low_latency.cu  bootstrap_low_latency.cuh  bootstrap_wop.cu  bootstrap_wop.cuh  circuit_bootstrap.cu  circuit_bootstrap.cuh  device.cu  gaussian_noise.rs  global_parameters.rs  graph.rs  keyswitch.cu  keyswitch.cuh  lib.rs  multiplication.cu  multiplication.cuh  negation.cu  negation.cuh  parameters.rs  pareto.rs  traits.rs  vertical_packing.cu  vertical_packing.cuh  weight.rs  wop_bootstrap.cu  wop_bootstrap.cuh
src/complex/: operations.cuh
src/core_api/: mod.rs
src/crypto/: bootstrapping_key.cuh  gadget.cuh  ggsw.cuh  torus.cuh
src/crypto_api/: lwe_bsk.rs  lwe_ksk.rs  lwe_params.rs  lwe_secret_key.rs  mod.rs  rlwe_params.rs  rlwe_secret_key.rs  tests_serde.rs
src/fft/: bnsmfft.cuh  smfft.cuh  twiddles.cu  twiddles.cuh
src/gaussian_noise/: conversion.rs  noise.rs  security.rs
src/graph/: operator.rs  operator_index.rs  parameter_indexed.rs  range_parametrized.rs  unparametrized.rs  value_parametrized.rs
src/guide/: guide_part1_install.rs  guide_part2_encrypt_decrypt.rs  mod.rs  (+3 more)
v0-parameters/: Cargo.toml  README.md
(+5143 files in other folders)
