[tool.poetry]
name = "concrete-numpy"
version = "0.4.0"
description = "Concrete Numpy is a python package that contains the tools data scientists need to compile various numpy functions into their Fully Homomorphic Encryption (FHE) equivalents. Concrete Numpy goes on top of the Concrete Library and its Compiler."
license = "BSD-3-Clause"
authors = [
    "Zama <hello@zama.ai>",
    "Arthur Meyre <hello@zama.ai>",
    "Umut Sahin <hello@zama.ai>",
    "Benoit Chevallier-Mames <hello@zama.ai>",
    "Jordan Frery <hello@zama.ai>",
    "Alexandre Quint <hello@zama.ai>",
    "Ayoub Benaissa <hello@zama.ai>",
    "Andrei Stoian <hello@zama.ai>",
    "Jeremy Bradley <hello@zama.ai>",
]
homepage = "https://zama.ai/concrete/"
repository = "https://github.com/zama-ai/concrete-numpy"
documentation = "http://docs.zama.ai/concrete-numpy/"
keywords = ["FHE", "homomorphic encryption", "privacy", "security"]
packages = [
    { include = "concrete" },
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Compilers",
]
readme = "pypi_readme.md"

[tool.poetry.urls]
"README" = "https://github.com/zama-ai/concrete-numpy/blob/main/README.md"
"Bug Tracker" = "https://github.com/zama-ai/concrete-numpy/issues"
"Discourse" = "https://community.zama.ai/c/concrete-numpy/7"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
numpy = "^1.22.0"
pygraphviz = { version = "^1.7", optional = true }
Pillow = "^9.0.0"
loguru = "^0.5.3"
setuptools = "*"
concrete-compiler = "^0.5.0"
torch = "^1.10.2"

[tool.poetry.extras]
full = ["pygraphviz"]
extras = ["pygraphviz"]

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
# pinning click due to: https://github.com/psf/black/issues/2964
click = "8.0.4"
pylint = "2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "0.931"
pydocstyle = "^6.1.1"
jupyter = "^1.0.0"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
nbsphinx = "0.8.7"
tqdm = "^4.62.3"
psutil = "^5.9.0"
py-cpuinfo = "^8.0.0"
python-dotenv = "^0.19.2"
nbmake = "^1.1"
python-semantic-release = "7.23.0"
semver = "^2.13.0"
tomlkit = "^0.7.0"
GitPython = "^3.1.26"
pytest-xdist = "^2.5.0"
pytest-randomly = "^3.11.0"
pygments-style-tomorrow = "^1.0.0"
beautifulsoup4 = "^4.10.0"
pip-licenses = "^3.5.3"
sphinx-zama-theme = "3.0.1"
pip-audit = "^1.1.1"
pytest-codeblocks = "^0.12.2"
py-progress-tracker = "^0.4.0"
twine = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:pandas not found, skipping conversion test.:ImportWarning",
    "ignore:scipy not found, skipping conversion test.:ImportWarning",
    "ignore:Matplotlib is currently using .*, which is a non-GUI backend, so cannot show the figure\\.:UserWarning"
]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "docs/conf.py:release"
upload_to_pypi = "False"
