[tool.poetry]
name = "concrete-numpy"
version = "0.9.0"
description = "Concrete Numpy is an open-source library which simplifies the use of fully homomorphic encryption (FHE)."
license = "BSD-3-Clause"
authors = [
    "Zama <hello@zama.ai>",
    "Arthur Meyre <hello@zama.ai>",
    "Umut Sahin <hello@zama.ai>",
    "Benoit Chevallier-Mames <hello@zama.ai>",
    "Jordan Frery <hello@zama.ai>",
    "Alexandre Quint <hello@zama.ai>",
    "Ayoub Benaissa <hello@zama.ai>",
    "Andrei Stoian <hello@zama.ai>",
    "Jeremy Bradley <hello@zama.ai>",
]
homepage = "https://zama.ai/concrete/"
repository = "https://github.com/zama-ai/concrete-numpy"
documentation = "http://docs.zama.ai/concrete-numpy/"
keywords = ["FHE", "homomorphic encryption", "privacy", "security"]
packages = [
    { include = "concrete" },
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Compilers",
]
readme = "README.md"

[tool.poetry.urls]
"README" = "https://github.com/zama-ai/concrete-numpy/blob/main/README.md"
"Bug Tracker" = "https://github.com/zama-ai/concrete-numpy/issues"
"Discourse" = "https://community.zama.ai/c/concrete-numpy/7"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
numpy = "^1.21.0"
Pillow = "^9.0.0"
concrete-compiler = "^0.23.1"
torch = "1.12.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
pylint = "2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "0.931"
pydocstyle = "^6.1.1"
jupyter = "^1.0.0"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
tqdm = "^4.62.3"
psutil = "^5.9.0"
py-cpuinfo = "^8.0.0"
python-dotenv = "^0.19.2"
nbmake = "^1.1"
python-semantic-release = "7.23.0"
semver = "^2.13.0"
tomlkit = "^0.7.0"
GitPython = "^3.1.26"
pytest-xdist = "^2.5.0"
pytest-randomly = "^3.11.0"
pygments-style-tomorrow = "^1.0.0"
beautifulsoup4 = "^4.10.0"
pip-licenses = "^3.5.3"
pip-audit = "^1.1.1"
pytest-codeblocks = "^0.12.2"
twine = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Implicitly cleaning up:ResourceWarning",
    "ignore:pandas not found, skipping conversion test.:ImportWarning",
    "ignore:scipy not found, skipping conversion test.:ImportWarning",
    "ignore:Matplotlib is currently using .*, which is a non-GUI backend, so cannot show the figure\\.:UserWarning"
]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_pypi = "False"
