[tool.poetry]
name = "concrete-numpy"
version = "1.0.0-rc2"
description = "Concrete Numpy is an open-source library which simplifies the use of fully homomorphic encryption (FHE)."
license = "BSD-3-Clause"
authors = [
    "Zama <hello@zama.ai>",
    "Arthur Meyre <hello@zama.ai>",
    "Umut Sahin <hello@zama.ai>",
    "Benoit Chevallier-Mames <hello@zama.ai>",
    "Jordan Frery <hello@zama.ai>",
    "Alexandre Quint <hello@zama.ai>",
    "Ayoub Benaissa <hello@zama.ai>",
    "Andrei Stoian <hello@zama.ai>",
    "Jeremy Bradley <hello@zama.ai>",
]
homepage = "https://zama.ai/concrete/"
repository = "https://github.com/zama-ai/concrete-numpy"
documentation = "http://docs.zama.ai/concrete-numpy/"
keywords = ["FHE", "homomorphic encryption", "privacy", "security"]
packages = [
    { include = "concrete" },
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Compilers",
]
readme = "README.md"

[tool.poetry.urls]
"README" = "https://github.com/zama-ai/concrete-numpy/blob/main/README.md"
"Bug Tracker" = "https://github.com/zama-ai/concrete-numpy/issues"
"Discourse" = "https://community.zama.ai/c/concrete-numpy/7"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
numpy = [
    {version = "^1.23.5", python = ">=3.8"},
    {version = "1.21.6", python = "<3.8"}
]
concrete-compiler = "0.24.0rc5"
torch = "^1.13.1"
scipy = [
    {version = "^1.10.1", python = ">=3.8"},
    {version = "1.7.3", python = "<3.8"}
]

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
pylint = "2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^1.0"
pydocstyle = "^6.1.1"
jupyter = "^1.0.0"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
tqdm = "^4.62.3"
psutil = "^5.9.0"
py-cpuinfo = "^8.0.0"
python-dotenv = "^0.19.2"
nbmake = "^1.1"
python-semantic-release = "7.23.0"
semver = "^2.13.0"
tomlkit = "^0.7.0"
GitPython = "^3.1.26"
pytest-xdist = "^2.5.0"
pytest-randomly = "^3.11.0"
pygments-style-tomorrow = "^1.0.0"
beautifulsoup4 = "^4.10.0"
pip-licenses = "^3.5.3"
pip-audit = "^1.1.1"
pytest-codeblocks = "^0.12.2"
twine = "^3.7.1"
ruff = "^0.0.191"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Implicitly cleaning up:ResourceWarning",
    "ignore:pandas not found, skipping conversion test.:ImportWarning",
    "ignore:scipy not found, skipping conversion test.:ImportWarning",
    "ignore:Matplotlib is currently using .*, which is a non-GUI backend, so cannot show the figure\\.:UserWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning"
]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_pypi = "False"

[tool.ruff]
target-version = "py37"
line-length = 100
select = [
    "F", "E", "W", "C90", "I", "UP", "N", "YTT", "S", "BLE", "FBT", "B", "C4",
    "T10", "EM", "ICN", "Q", "RET", "SIM", "TID", "ARG", "DTZ", "ERA", "PD", "PGH",
    "PLC", "PLE", "PLR", "PLW", "RUF"
]
ignore = [
    "A", "D", "FBT", "T20", "ANN", "N806", "ARG001", "S101", "BLE001", "RUF100", "ERA001",
    "RET504", "TID252", "PD011", "I001", "UP015", "C901", "A001", "SIM118", "PGH003"
]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["PLC2201"]
