[package]
name = "concrete-benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-core = { path="../concrete-core" }
concrete-commons = { path="../concrete-commons" }
criterion = "=0.3.5"

[features]
default = ["backend_core"]
backend_core = []
backend_optalysys = []
