[package]
name = "concrete-boolean"
version = "0.2.0"
edition = "2018"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Homomorphic Boolean circuit interface for the concrete FHE library."
homepage = "https://crates.io/crates/concrete"
documentation = "https://docs.zama.ai/concrete/boolean-lib"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "x86_64")'.dependencies.concrete-core]
version = "1.0.0"
features = [
    "backend_default",
    "backend_default_serialization",
    "backend_default_parallel",
    "backend_fft",
    "backend_fft_serialization",
    "backend_default_generator_x86_64_aesni",
    "seeder_x86_64_rdseed",
]

[target.'cfg(target_arch = "aarch64")'.dependencies.concrete-core]
version = "1.0.0"
features = [
    "backend_default",
    "backend_default_serialization",
    "backend_default_parallel",
    "backend_default_generator_aarch64_aes"
]

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.4"


[features]
cuda = ["concrete-core/backend_cuda"]
nightly-avx512 = ["concrete-core/backend_fft_nightly_avx512"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
