[package]
name = "concrete-commons"
version = "0.2.0"
edition = "2018"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Common tools for the concrete FHE library."
homepage = "https://crates.io/crates/concrete"
documentation = "https://docs.zama.ai/concrete/lib"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[lib]
name = "concrete_commons"
bench = false

[dependencies]
serde = { version = "1.0", optional = true }

[features]
serde_serialize = ["serde", "serde/derive"]
