[package]
name = "concrete-core"
version = "0.1.10"
edition = "2018"
build = "build.rs"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "AGPL-3.0"
description = "Concrete is a fully homomorphic encryption (FHE) library that implements Zama's variant of TFHE."
homepage = "https://crates.io/crates/concrete"
documentation = "https://concrete.zama.ai"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[build-dependencies]
cmake = { version = "0.1", optional = true}

[dev-dependencies]
concrete-npe = "=0.1.8"
criterion = "0.3.4"
rand = "0.7"
rand_distr = "0.2.2"
kolmogorov_smirnov = "1.1.0"
itertools = "0.10"
serde_test = "1.0.125"

[dependencies]
concrete-fftw = {version = "=0.1.0", features = ["serialize"]}
concrete-commons = "=0.1.1"
concrete-csprng= "=0.1.7"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
bincode = "1.3"
rayon = {version = "1.5.0", optional=true}

[lib]
name = "concrete_core"
crate-type = ["cdylib", "rlib"]
bench = false

[features]
gpu = ["cmake"]
cloud-computing = []
slow-csprng = ["concrete-csprng/slow"]
multithread = ["rayon", "concrete-csprng/multithread"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
