[package]
name = "concrete-core"
version = "1.0.0-alpha"
edition = "2018"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Concrete is a fully homomorphic encryption (FHE) library that implements Zama's variant of TFHE."
homepage = "https://crates.io/crates/concrete"
documentation = "https://docs.zama.ai/concrete/lib"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[dev-dependencies]
concrete-npe = "0.2.0"
criterion = "0.3.4"
rand = "0.7"
rand_distr = "0.2.2"
kolmogorov_smirnov = "1.1.0"
itertools = "0.10"
serde_test = "1.0.125"

[dependencies]
concrete-fftw = { version = "=0.1.2" }
concrete-commons = "=0.2.0"
concrete-csprng = "=0.1.7"
serde = { version = "1.0", optional = true }
lazy_static = "1.4.0"
rayon = { version = "1.5.0", optional = true }

[lib]
name = "concrete_core"
bench = false

[features]
default = ["backend_core"]
doc = []
backend_core = []
slow-csprng = ["concrete-csprng/slow"]
multithread = ["rayon", "concrete-csprng/multithread"]
serde_serialize = ["serde", "serde/derive", "concrete-commons/serde_serialize",
    "concrete-fftw/serialize"]

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--html-in-header", "katex-header.html"]
